--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -80,6 +80,16 @@
 			<artifactId>swagger-annotations</artifactId>
 			<version>2.2.15</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
  </dependencies>
 
 	<build>
