--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,10 +1,14 @@
-
+# H2 Database Configuration
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   datasource:
-    url: jdbc:hsqldb:mem:testdb
-    driver-class-name: org.hsqldb.jdbc.JDBCDriver
+    url: jdbc:h2:file:~/testdb
     username: sa
-    password: 
+    password:
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
